--- a/iviz_utils/iviz_utils.csproj
+++ b/iviz_utils/iviz_utils.csproj
@@ -20,6 +20,7 @@
         <ProjectReference Include="..\iviz_ntp_lib\iviz_ntp_lib.csproj" />
         <ProjectReference Include="..\iviz_octree_helper\iviz_octree_helper.csproj" />
         <ProjectReference Include="..\iviz_rosbag_lib\iviz_rosbag_lib.csproj" />
+        <ProjectReference Include="..\iviz_roslib2\iviz_roslib2.csproj" />
         <ProjectReference Include="..\iviz_roslib\iviz_roslib.csproj" />
         <ProjectReference Include="..\iviz_rosmaster_lib\iviz_rosmaster_lib.csproj" />
         <ProjectReference Include="..\iviz_tf_manager\iviz_tf_manager.csproj" />
