--- a/iviz_rosclient/iviz_rosclient.csproj
+++ b/iviz_rosclient/iviz_rosclient.csproj
@@ -13,7 +13,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Nito.AsyncEx.Coordination" Version="5.1.2" />
+      <PackageReference Include="System.Threading.Channels" Version="6.0.0" />
     </ItemGroup>
 
 </Project>
