--- a/iviz_utils_tests/iviz_utils_tests.csproj
+++ b/iviz_utils_tests/iviz_utils_tests.csproj
@@ -24,6 +24,7 @@
     <ItemGroup>
       <ProjectReference Include="..\iviz_remote_lib\iviz_remote_lib.csproj" />
       <ProjectReference Include="..\iviz_rosbag_lib\iviz_rosbag_lib.csproj" />
+      <ProjectReference Include="..\iviz_roslib2\iviz_roslib2.csproj" />
       <ProjectReference Include="..\iviz_roslib\iviz_roslib.csproj" />
       <ProjectReference Include="..\iviz_rosmaster_lib\iviz_rosmaster_lib.csproj" />
       <ProjectReference Include="..\iviz_xmlrpc\iviz_xmlrpc.csproj" />
