--- a/iviz_bridge_client_lib/iviz_bridge_client_lib.csproj
+++ b/iviz_bridge_client_lib/iviz_bridge_client_lib.csproj
@@ -1,9 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netstandard2.1</TargetFramework>
         <Nullable>enable</Nullable>
         <LangVersion>default</LangVersion>
+        <AssemblyName>Iviz.Bridge.Client</AssemblyName>
+        <RootNamespace>Iviz.Bridge.Client</RootNamespace>
+        <TargetFrameworks>netstandard2.1;net6.0;net7.0</TargetFrameworks>
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="Utf8Json" Version="1.3.7" />
